Changed the buttons in the UI to more beautiful ones and aligned the interface on the form.

--- a/Torrent/Torrent/Torrent.csproj
+++ b/Torrent/Torrent/Torrent.csproj
@@ -8,12 +8,21 @@
 
   <ItemGroup>
     <None Remove=".png" />
+    <None Remove="AddButtonImage.png" />
+    <None Remove="ResumeDownloadButtonImage.png" />
+    <None Remove="StopDownloadButton.png" />
   </ItemGroup>
 
   <ItemGroup>
     <Reference Include="MonoTorrent">
       <HintPath>..\MonoTorrent.dll</HintPath>
     </Reference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="AddButtonImage.png" />
+    <Resource Include="ResumeDownloadButtonImage.png" />
+    <Resource Include="StopDownloadButton.png" />
   </ItemGroup>
 
 </Project>
