Connected the MonoTorrent library. Made a working function of downloading torrent files and outputting information to the UI.

--- a/Torrent/Torrent/Torrent.csproj
+++ b/Torrent/Torrent/Torrent.csproj
@@ -14,9 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Reference Include="MonoTorrent">
-      <HintPath>..\MonoTorrent.dll</HintPath>
-    </Reference>
+    <ProjectReference Include="..\TorrentLibrary\TorrentLibrary.csproj" />
   </ItemGroup>
 
   <ItemGroup>
