--- a/Torrent/Torrent/Torrent.csproj
+++ b/Torrent/Torrent/Torrent.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <None Remove=".png" />
     <None Remove="AddButtonImage.png" />
+    <None Remove="icon.ico" />
     <None Remove="ResumeDownloadButtonImage.png" />
     <None Remove="StopDownloadButton.png" />
   </ItemGroup>
@@ -19,6 +20,7 @@
 
   <ItemGroup>
     <Resource Include="AddButtonImage.png" />
+    <Resource Include="icon.ico" />
     <Resource Include="ResumeDownloadButtonImage.png" />
     <Resource Include="StopDownloadButton.png" />
   </ItemGroup>
